cmake_minimum_required(VERSION 3.0)

project(4.operation)

add_executable(4.operation.add 4.operation.add.cpp)
add_executable(4.operation.sub 4.operation.sub.cpp)
add_executable(4.operation.mul 4.operation.mul.cpp)
add_executable(4.operation.div 4.operation.div.cpp)
add_executable(4.operation.self.add.sub 4.operation.self.add.sub.cpp)
add_executable(4.operation.accumulate 4.operation.accumulate.cpp)


